# Verdant-Valley

./: .gitignore  .gitmodules  CMakeLists.txt
include/Common/: Shaders.hpp  SoundEngine.hpp  TextureLoader.hpp  VerdantValleyWindow.hpp
include/Game/: Game.hpp
include/Logs/: LogManager.hpp  Logs.hpp
include/Renderer/: ElementBuffer.hpp  VertexArray.hpp  VertexBuffer.hpp
shaders/: fragment.glsl  vertex.glsl
src/: CMakeLists.txt  main.cpp
src/Common/: Shader.cpp  TextureLoader.cpp  VerdantValleyWindow.cpp
src/Game/: Game.cpp
src/Logs/: LogManager.cpp
src/Renderer/: ElementBuffer.cpp  VertexArray.cpp  VertexBuffer.cpp
tools/: glsl_to_header.cpp
